<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/home"
            android:checked="true"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/sports"
            android:checked="false"
            android:title="@string/menu_sports" />

        <item
            android:id="@+id/events"
            android:checked="false"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/partners"
            android:checked="false"
            android:title="@string/menu_partners" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/exit"
            android:checked="false"
            android:title="@string/menu_exit" />

    </group>
</menu>